--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "API Gateway and Client Serving",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/ECAM-AD5L/gateway/issues"
   },
-  "homepage": "https://github.com/ECAM-AD5L/gateway#readme"
+  "homepage": "https://github.com/ECAM-AD5L/gateway#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "morgan": "^1.9.1"
+  }
 }
